--- a/static/css/bundle.css
+++ b/static/css/bundle.css
@@ -931,6 +931,10 @@ footer .future-days {
   border-top: 1px solid;
 }
 
+.signup-class .share-options .single-share .share-label {
+  width: 100%;
+}
+
 .signup-class .share-options .share-option {
   line-height: 34px;
 }
@@ -954,7 +958,7 @@ footer .future-days {
 
 .signup-class .share-options .share-option .glyphicon {
   top: 2px;
-  right: 5px;
+  left: 5px;
   cursor: pointer;
 }
 
@@ -1067,14 +1071,15 @@ footer .future-days {
 
 .signup-class .date-selection .share-dates {
   border-top: 1px solid;
-  padding: 35px 0;
+  padding: 35px 0 35px 15px;
 }
 
 .signup-class .date-selection .share-dates .pickup-date {
-  background-color: #f2f2f2;
+  background-color: #555;
   border: 1px solid beige;
   box-shadow: 1px 2px 5px #ccc;
-  color: #c98702;
+  color: #b07602;
+  opacity: .7;
   cursor: pointer;
   display: inline-block;
   font-family: "RalewayRegular";
@@ -1085,11 +1090,13 @@ footer .future-days {
 }
 
 .signup-class .date-selection .share-dates .pickup-date:hover {
-  background-color: rgba(201, 135, 2, 0.1);
+  background-color: #626262;
 }
 
 .signup-class .date-selection .share-dates .pickup-date.selected {
   background-color: rgba(201, 135, 2, 0.3);
+  color: #c98702;
+  opacity: 1;
 }
 
 .signup-class .date-selection .share-dates .pickup-date > div {
@@ -1363,10 +1370,14 @@ footer .future-days {
     background-color: rgba(201, 135, 2, 0.1);
   }
 
+  .signup-class .date-selection .share-dates {
+    padding: 0 0 35px;
+  }
+
   .signup-class .date-selection .share-dates .share-label {
     text-align: center;
     font-size: 1.2rem;
-    margin: 10px 0 25px;
+    margin: 35px auto;
   }
 
   .signup-class .date-selection .share-dates .pickup-date {
